fixed cards wrapping

--- a/src/styles/productcard.scss
+++ b/src/styles/productcard.scss
@@ -42,7 +42,7 @@
 
 .card-image {
   width: 100%;
-  height: 260px;
+  height: 300px;
 }
 
 .card-text {
@@ -52,7 +52,7 @@
 
 @media (min-width: 688px) {
   .card-box {
-    width: 600px;
+    width: 500px;
   }
 
   .card-image {
